# hcoroutine

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/superpowers/plans/: 2026-05-26-hcoroutine-plan.md
docs/superpowers/specs/: 2026-05-26-hcoroutine-design.md
include/hcoroutine/: channel.h  cond.h  coroutine.h  io.h  mutex.h  rwlock.h  scheduler.h  types.h  waitgroup.h
src/common/: prio_queue.h  queue.h
src/common/fcontext/: fcontext.h  jump_arm64_aapcs_elf_gas.S  jump_x86_64_sysv_elf_gas.S  make_arm64_aapcs_elf_gas.S  make_x86_64_sysv_elf_gas.S  ontop_arm64_aapcs_elf_gas.S  ontop_x86_64_sysv_elf_gas.S
src/coroutine/: coroutine.cpp  coroutine.h  stack.cpp  stack.h
src/io/: io.cpp  reactor.cpp  reactor.h  timer_wheel.cpp  timer_wheel.h
src/scheduler/: scheduler.cpp  worker.cpp  worker.h
src/sync/: channel.cpp  cond.cpp  mutex.cpp  rwlock.cpp  waitgroup.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  coroutine_test.cpp  echo_test.cpp  priority_sched_test.cpp  priority_test.cpp  queue_test.cpp  scheduler_test.cpp  stack_test.cpp  sync_test.cpp  types_test.cpp  usage_example_test.cpp  worker_test.cpp
